--- a/assets/scss/component/_principal.scss
+++ b/assets/scss/component/_principal.scss
@@ -1,4 +1,8 @@
 .principal {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 2;
+    grid-row-end: 3;
     &__carousel {
         position: relative;
         margin-bottom: 48px;
