--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,17 +19,27 @@ p {
 }
 
 .structure {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr auto 1fr;
 }
 
 .nav {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 1;
+  grid-row-end: 2;
   background-color: #e4cdc1;
   display: flex;
+  flex-flow: row wrap;
   align-items: center;
   justify-content: space-between;
   padding: 12px 13px;
+}
+@media (max-width: 560px) {
+  .nav {
+    justify-content: center;
+  }
 }
 .nav__icon {
   display: flex;
@@ -42,7 +52,6 @@ p {
 }
 .nav__links__link a {
   padding: 8px;
-  text-align: center;
   text-decoration: none;
 }
 .nav__links__link a:hover {
@@ -52,6 +61,12 @@ p {
   color: rgba(0, 0, 0, 0.9);
 }
 
+.principal {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 2;
+  grid-row-end: 3;
+}
 .principal__carousel {
   position: relative;
   margin-bottom: 48px;
@@ -164,6 +179,10 @@ p {
   }
 }
 .footer {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 3;
+  grid-row-end: 4;
   background-color: #e4cdc1;
   display: flex;
   flex-direction: column;
