--- a/assets/scss/base/_reset.scss
+++ b/assets/scss/base/_reset.scss
@@ -19,7 +19,7 @@ p {
 }
 
 .structure {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr auto 1fr;
 }
