--- a/assets/scss/component/_footer.scss
+++ b/assets/scss/component/_footer.scss
@@ -1,4 +1,8 @@
 .footer {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 3;
+    grid-row-end: 4;
     background-color: #e4cdc1;
     display: flex;
     flex-direction: column;
